@@ -12,6 +12,9 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
+- Object/structseq.c: Implemented new structseq representation. structseqs
+  like the return value of os.stat are more readable.
+
 - Patch #1700288: added a type attribute cache that caches method accesses,
   resulting in speedups in heavily object-oriented code.
 
